Archive2/27/d5dd61f8667af9/output
main.cpp:22:1: error: expected ';' after class definition
 }
 ^
main.cpp: In member function 'test& test::operator=(test&&)':
main.cpp:16:9: error: only constructors take member initializers
         value(self.value)
         ^
main.cpp: In function 'int main()':
main.cpp:27:14: error: use of deleted function 'constexpr test::test(const test&)'
     test b = a;
              ^
main.cpp:3:7: note: 'constexpr test::test(const test&)' is implicitly declared as deleted because 'test' declares a move constructor or move assignment operator
 class test
       ^
